--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <script src="ejercicio_1.js"></script>
+    <!-- <script src="ejercicio_2.js"></script> -->
+    <!-- <script src="ejercicio_3.js"></script> -->
+    <!-- <script src="ejercicio_4.js"></script> -->
+    <!-- <script src="ejercicio_5.js"></script> -->
+    <!-- <script src="ejercicio_6.js"></script> -->
+    <!-- <script src="ejercicio_7.js"></script> -->
 </body>
 </html>
